--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               Let me know if you'd like further tweaks! 🚀
             </p>
 
-            <a href="#" class="btn has-before">
+            <a href="/assets/images/Resume.pdf" class="btn has-before" target="_blank">
                 <span class="span" style="color: #FF7A01;">Download Resumé</span>
 
                 <ion-icon name="download-outline" aria-hidden="true" style="color: #FF7A01;"></ion-icon>
