Removed unnecessary files

--- a/projects/leprestige.html
+++ b/projects/leprestige.html
@@ -97,7 +97,7 @@
                   <li><strong>Category:</strong> Online Restaurant</li>
                   <li><strong>Project date:</strong> 05 October, 2024</li>
                   <li><strong>Repository:</strong> <a href="https://github.com/JimwellC/LePrestige" target="_blank">GitHub Repository</a></li>
-                  <li><strong>Project URL:</strong> <a href="https://leprestige.netlify.app/" target="_blank">www.leprestige.netlify.app</a></li>
+                  <li><strong>Project URL:</strong> <a href="#">Not Available</a></li>
                 </ul>
               </div>
               <p class="project-description">LePrestige is an online restaurant that accepts orders and reservations. This project demonstrates the design and functionality of the LePrestige platform, including features such as menu listings, detailed dish pages, and a seamless reservation and ordering experience.</p>
