--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     - primary meta tags
   -->
   <title>Jimwell Calma - Online Portfolio</title>
-  <meta name="title" content="Kane Williams - Web & App Developer">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
+  <meta name="title" content="Jimwell Calma - Creative Web & App Developer | Frontend & UI/UX Specialist">
+  <meta name="description" content="Jimwell Calma is a passionate web and app developer specializing in responsive design, user-friendly interfaces, and seamless digital experiences. Explore projects in web development, eCommerce, and modern UI/UX solutions.">
+
 
   <!-- 
     - favicon
