--- a/projects/arya.html
+++ b/projects/arya.html
@@ -56,7 +56,7 @@
   <header class="header project-header" data-header>
     <div class="container">
       <a href="/index.html" class="logo">
-        <img src="/assets/images/LogoCalma.png" width="60" height="50" alt="Pfolio home">
+        <img src="/assets/images/LogoCalma.png" width="60" height="50" alt="Personal Logo Icon">
       </a>
     </div>
   </header>
