--- a/index.html
+++ b/index.html
@@ -534,6 +534,18 @@
               </div>
             </li>
 
+            <li class="slider-item">
+              <div class="portfolio-card img-holder" style="--width: 500; --height: 500;">
+                <img src="./assets/images/projects/EcoClean.png" width="500" height="500" loading="lazy" alt="Photography Image"
+                  class="img-cover">
+                <div class="card-content">
+                  <h3 class="h3 card-title" style="color: #FF7A01;">EcoClean</h3>
+                  <p class="card-text">A clean and green initiative showcasing community action, sustainability events, and impactful volunteer efforts toward a better environment.</p>
+                </div>
+                <a href="/projects/ecoclean.html" class="layer-link"></a>
+              </div>
+            </li>
+
           </ul>
           <div class="slider-controls">
             <button class="slider-control prev" data-slider-prev aria-label="Slide to previous item">
