--- a/index.html
+++ b/index.html
@@ -924,11 +924,11 @@
             <!-- Testimonial 1 -->
             <li class="slider-item" data-slider-item>
               <div class="testimonial-card">
-                <img src="./assets/images/testimonials/avatar1.jpg" alt="Maria Santos" class="testimonial-avatar">
-                <p class="testimonial-text">"Jimwell’s creativity and attention to detail brought our web project to life. Working with him was smooth and inspiring."</p>
+                <img src="./assets/images/testimonials/avatar1.jpg" alt="Dr. Joseph A. Esquivel" class="testimonial-avatar">
+                <p class="testimonial-text">Waiting for Response</p>
                 <div class="testimonial-author">
-                  <strong>— Maria Santos</strong><br>
-                  <span>Project Manager, Horizon Auto Spa</span>
+                  <strong>- Dr. Joseph A. Esquivel</strong><br>
+                  <span>Cisco Coordinator / Cisco ASC</span>
                 </div>
               </div>
             </li>
@@ -936,11 +936,11 @@
             <!-- Testimonial 2 -->
             <li class="slider-item" data-slider-item>
               <div class="testimonial-card">
-                <img src="./assets/images/testimonials/avatar1.jpg" alt="Maria Santos" class="testimonial-avatar">
-                <p class="testimonial-text">"He was a reliable team player during our internship. Jimwell always delivered quality code and thoughtful designs."</p>
+                <img src="assets/images/testimonial/chris-almocera.jpeg" alt="Mr. Chris Almocera" class="testimonial-avatar">
+                <p class="testimonial-text">Waiting for Response</p>
                 <div class="testimonial-author">
-                  <strong>— John Velasquez</strong><br>
-                  <span>Software Engineer, XYZ Corp</span>
+                  <strong>— Mr. Chris Almocera</strong><br>
+                  <span>Practicum Coordinator</span>
                 </div>
               </div>
             </li>
@@ -948,11 +948,11 @@
             <!-- Testimonial 3 -->
             <li class="slider-item" data-slider-item>
               <div class="testimonial-card">
-                <img src="./assets/images/testimonials/avatar1.jpg" alt="Maria Santos" class="testimonial-avatar">
-                <p class="testimonial-text">"One of the most dedicated and passionate developers I’ve mentored. Jimwell takes initiative and always seeks to improve."</p>
+                <img src="assets/images/testimonial/Everly-Chua.png" alt="Dr. Everly Chua" class="testimonial-avatar">
+                <p class="testimonial-text">Waiting for Response</p>
                 <div class="testimonial-author">
-                  <strong>— Prof. Liza Navarro</strong><br>
-                  <span>Mentor, Holy Angel University</span>
+                  <strong>— Dr. Everly Chua</strong><br>
+                  <span>Graduate School of IT Program Coordinator</span>
                 </div>
               </div>
             </li>
