--- a/index.html
+++ b/index.html
@@ -956,16 +956,29 @@
                 </div>
               </div>
             </li>
+
+             <!-- Testimonial 4 -->
+             <li class="slider-item" data-slider-item>
+              <div class="testimonial-card">
+                <img src="assets/images/testimonial/Rossel-Calma.jpg" alt="Ms. Rossel Calma" class="testimonial-avatar">
+                <p class="testimonial-text">Jimwell Clama is a reliable part-time cashier who consistently delivers excellent customer service. His strong communication skills and ability to manage sales and diverse customer interactions make him a standout in his role.</p>
+                <div class="testimonial-author">
+                  <strong>— Ms. Rossel Calma</strong><br>
+                  <span>Store Owner</span>
+                </div>
+              </div>
+            </li>
     
           </ul>
     
           <!-- Reuse slider buttons -->
           <div class="slider-controls">
-            <button class="slider-control prev" data-slider-prev aria-label="Previous">
+            <button class="slider-control prev" data-slider-prev aria-label="Slide to previous item">
               <div class="line"></div>
               <div class="arrow"></div>
             </button>
-            <button class="slider-control next" data-slider-next aria-label="Next">
+
+            <button class="slider-control next" data-slider-next aria-label="Slide to next item">
               <div class="line"></div>
               <div class="arrow"></div>
             </button>
