--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
             <li class="slider-item" data-slider-item>
               <div class="testimonial-card">
                 <img src="./assets/images/testimonials/avatar1.jpg" alt="Dr. Joseph A. Esquivel" class="testimonial-avatar">
-                <p class="testimonial-text">Waiting for Response</p>
+                <p class="testimonial-text">Jimwell and his team consistently showed strong collaboration, creativity, and technical skill. Each member brought something unique to the table, and together they delivered high-quality work with clear communication and purpose. They tackled challenges head-on and supported one another throughout the project.</p>
                 <div class="testimonial-author">
                   <strong>- Dr. Joseph A. Esquivel</strong><br>
                   <span>Cisco Coordinator / Cisco ASC</span>
@@ -936,11 +936,11 @@
             <!-- Testimonial 2 -->
             <li class="slider-item" data-slider-item>
               <div class="testimonial-card">
-                <img src="assets/images/testimonial/chris-almocera.jpeg" alt="Mr. Chris Almocera" class="testimonial-avatar">
-                <p class="testimonial-text">Waiting for Response</p>
+                <img src="assets/images/testimonial/bea-ayson.jpg" alt="Ms. Bea Ayson" class="testimonial-avatar">
+                <p class="testimonial-text">I absolutely love the website ARYA! It’s so easy to navigate, and I was able to find exactly what I was looking for in no time. The shoe selection is amazing, and I was impressed by the quality of the thrifted shoes—each pair is well-described with detailed photos and sizing info, which made shopping a breeze. I’ll definitely be recommending this site to friends!</p>
                 <div class="testimonial-author">
-                  <strong>— Mr. Chris Almocera</strong><br>
-                  <span>Practicum Coordinator</span>
+                  <strong>— Ms. Bea Ayson</strong><br>
+                  <span>Arya Thrift Shop Owner</span>
                 </div>
               </div>
             </li>
@@ -968,6 +968,18 @@
                 </div>
               </div>
             </li>
+
+            <!-- Testimonial 5 -->
+            <li class="slider-item" data-slider-item>
+              <div class="testimonial-card">
+                <img src="assets/images/testimonial/Sarah-Dayrit.jpg" alt="Ms. Sarah Dayrit" class="testimonial-avatar">
+                <p class="testimonial-text">I was impressed by how easy it was to navigate the website Horizon Auto Spa and book my detailing appointment. The layout is clean, and it’s clear they’ve put a lot of thought into making the experience simple for customers.</p>
+                <div class="testimonial-author">
+                  <strong>— Ms. Sarah Dayrit</strong><br>
+                  <span>Horizon Auto Spa Co-Owner</span>
+                </div>
+              </div>
+            </li>
     
           </ul>
     
@@ -990,7 +1002,7 @@
   </main>
 
 
-  
+
 
   <!-- 
     - #FOOTER
